# master-thesis-map-matching

./: README.md  pyproject.toml
input/: Haikou_E.txt  Haikou_V.txt
notebook/: bar_tree_nb.ipynb  frechet.ipynb  graph.ipynb  match.ipynb  sspd_nb.ipynb
notebook/output/: bar_tree-256-const_1.tikz  bar_tree-256-const_2.tikz  bar_tree-256-const_3.tikz  bar_tree-256-query_1.tikz  bar_tree-256-query_2.tikz  bar_tree-256-query_3.tikz  bar_tree-256.tikz  bar_tree-64-const_1.tikz  bar_tree-64-const_2.tikz  bar_tree-64-const_3.tikz  bar_tree-64-query_1.tikz  bar_tree-64-query_2.tikz  bar_tree-64-query_3.tikz  bar_tree-64.tikz  edge_large-1-1.tikz  edge_large-1-2.tikz  edge_large-1-3.tikz  edge_large-1-4.tikz  edge_large-2-1.tikz  edge_large-2-2.tikz  edge_large-2-3.tikz  edge_large-2-4.tikz  edge_large-3-1.tikz  edge_large-3-2.tikz  edge_large-3-3.tikz  edge_large-3-4.tikz  edge_large-4-1.tikz  edge_large-4-2.tikz  edge_large-4-3.tikz  edge_large-4-4.tikz  edge_medium-1-1.tikz  edge_medium-1-2.tikz  edge_medium-1-3.tikz  edge_medium-1-4.tikz  edge_medium-2-1.tikz  edge_medium-2-2.tikz  edge_medium-2-3.tikz  edge_medium-2-4.tikz  edge_medium-3-1.tikz  edge_medium-3-2.tikz  (+63 more)
src/mapmatch/: bar_tree.py  box_tree.py  frechet_distance.py  frechet_distance_sspd.py  frechet_distance_sspd_fast.py  frechet_numba.py  graph_match.py  input_graph.py  sspd.py  utilities.py  visualisation.py
tests/: test_bar_tree.py  test_box_tree.py  test_input_graph.py
